--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,20 +1,25 @@
 {
   "name": "website",
-  "version": "0.0.1",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "astro": "astro",
     "build": "astro check && astro build",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .astro",
     "dev": "astro dev",
     "preview": "astro preview",
     "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.8",
+    "@astrojs/react": "^3.0.9",
     "@astrojs/starlight": "^0.15.1",
-    "@astrojs/tailwind": "^5.0.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@color-kit/crystal": "workspace:*",
-    "astro": "^4.0.1",
-    "sharp": "^0.32.5"
+    "astro": "^4.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.1",
+    "tailwindcss": "^3.4.0"
   }
 }
