--- a/packages/crystal/package.json
+++ b/packages/crystal/package.json
@@ -10,11 +10,9 @@
   "license": "MIT",
   "author": "nnecec <nnecec@gmail.com>",
   "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
-    },
-    "./package.json": "./package.json"
+    "types": "./dist/index.d.ts",
+    "require": "./dist/index.js",
+    "import": "./dist/index.mjs"
   },
   "main": "./dist/index.js",
   "files": [
@@ -27,13 +25,13 @@
   },
   "dependencies": {
     "@color-kit/react": "workspace:*",
-    "react": "^18.2.0",
-    "react-aria": "^3.31.0",
-    "react-stately": "^3.29.0"
+    "@radix-ui/react-slider": "^1.1.2",
+    "clsx": "^2.0.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
-    "bunchee": "^4.2.2"
+    "@types/react": "^18.2.46",
+    "bunchee": "^4.2.9"
   },
   "publishConfig": {
     "access": "public"
