--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@color-kit/core": ["packages/core/src"],
+      "@color-kit/atom": ["packages/atom/src"],
       "@color-kit/react": ["packages/react/src"],
       "@color-kit/crystal": ["packages/crystal/src"]
     }
