--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
       "dependsOn": ["^build"],
       "outputs": [".astro/**", "dist/**", "build/**"]
     },
+    "clean": {},
     "lint": {},
     "dev": {
       "cache": false,
