--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -9,15 +9,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@color-kit/color": "workspace:*",
     "@color-kit/crystal": "workspace:*",
-    "@color-kit/plugin-hex": "workspace:*",
-    "@color-kit/plugin-hsl": "workspace:*",
-    "daisyui": "^4.6.0",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.3"
+    "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "@types/node": "^20",
