--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.0",
-    "@nnecec/eslint-config": "^0.9.1",
+    "@nnecec/eslint-config": "^0.9.2",
     "@nnecec/prettier-config": "^0.4.1",
     "@nnecec/tsconfig": "^0.2.2",
     "@turbo/gen": "^1.12.4",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "turbo": "^1.12.4",
-    "typescript": "^5.3.3"
+    "typescript": "rc"
   },
   "packageManager": "pnpm@8.6.0"
 }
