--wip-- [skip ci]

--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@color-kit/utils": "workspace:*",
+    "@material/material-color-utilities": "^0.2.7",
     "culori": "^4.0.1"
   },
   "devDependencies": {
