--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -20,6 +20,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../tools/**/*.ts"],
   "exclude": ["node_modules"]
 }
