--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@color-kit/crystal": "workspace:*",
     "@color-kit/palette": "workspace:*",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/react": "^2.2.10",
     "culori": "^4.0.1",
-    "framer-motion": "^11.0.6",
-    "next": "14.1.0",
+    "framer-motion": "^11.0.8",
+    "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.51.0",
+    "tailwind-plugin-palette": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
