--- a/packages/tailwind-plugin-palette/package.json
+++ b/packages/tailwind-plugin-palette/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwindcss-plugin-palette",
+  "name": "@color-kit/tailwind-plugin-palette",
   "version": "0.0.0",
   "description": "The palette for tailwindcss",
   "keywords": [
@@ -9,7 +9,6 @@
   "repository": "https://github.com/nnecec/color-kit",
   "license": "MIT",
   "author": "nnecec <nnecec@gmail.com>",
-  "type": "module",
   "exports": {
     "types": "./dist/index.d.ts",
     "import": "./dist/index.mjs",
@@ -21,7 +20,6 @@
   ],
   "scripts": {
     "build": "bunchee",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "dev": "bunchee -w"
   },
   "dependencies": {
@@ -30,8 +28,6 @@
   },
   "devDependencies": {
     "bunchee": "^4.4.8",
-    "jest": "^29.7.0",
-    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   },
   "peerDependencies": {
