--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@changesets/cli": "^2.27.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.1.2",
+    "@next/eslint-plugin-next": "^14.1.3",
     "@nnecec/eslint-config": "^0.9.3",
     "@nnecec/prettier-config": "^0.4.1",
     "@nnecec/tsconfig": "^0.2.3",
-    "@turbo/gen": "^1.12.4",
+    "@turbo/gen": "^1.12.5",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "turbo": "^1.12.4",
-    "typescript": "rc"
+    "turbo": "^1.12.5",
+    "typescript": "^5.4.2"
   },
   "packageManager": "pnpm@8.6.0"
 }
