--- a/apps/showcase/package.json
+++ b/apps/showcase/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@color-kit/palette": "workspace:*",
+    "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "million": "3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
