--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@color-kit/crystal": "workspace:*",
     "@color-kit/palette": "workspace:*",
+    "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
     "culori": "^4.0.1",
+    "foxact": "^0.2.33",
     "framer-motion": "^11.0.8",
     "next": "14.1.3",
     "react": "^18",
@@ -21,6 +23,7 @@
     "tailwind-plugin-palette": "workspace:*"
   },
   "devDependencies": {
+    "@types/culori": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
