--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -13,9 +13,11 @@
     "@color-kit/palette": "workspace:*",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
+    "clsx": "^2.1.0",
     "culori": "^4.0.1",
     "foxact": "^0.2.33",
     "framer-motion": "^11.0.8",
+    "million": "^3.0.6",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
