--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Use Node.js 16
+      - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 20
 
-      - name: Use pnpm 8
+      - name: Use pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
