--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.0",
     "culori": "^4.0.1",
     "foxact": "^0.2.33",
-    "framer-motion": "^11.0.12",
+    "framer-motion": "11.0.8",
     "jotai": "^2.7.0",
     "nanoid": "^5.0.6",
     "next": "14.1.3",
