--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -25,6 +25,7 @@
     "tailwind-plugin-palette": "workspace:*"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/culori": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
