--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@color-kit/crystal": "workspace:*",
     "@color-kit/palette": "workspace:*",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.10",
@@ -19,18 +18,18 @@
     "jotai": "^2.7.1",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.",
     "tailwind-plugin-palette": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/culori": "^2.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.18",
-    "postcss": "^8",
+    "postcss": "^8.4.37",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.2"
   }
 }
