--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,11 +14,11 @@
     "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
     "culori": "^4.0.1",
-    "framer-motion": "11.0.15",
+    "framer-motion": "11.0.8",
     "jotai": "^2.7.1",
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18.",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-plugin-palette": "workspace:*"
   },
   "devDependencies": {
